--- a/src/assets/styles/cmps/StationEditModal.scss
+++ b/src/assets/styles/cmps/StationEditModal.scss
@@ -3,7 +3,7 @@
     top: calc(50% - 100px);
     left: 50%;
 
-    transform: translate(-50%,-50%);
+    // transform: translate(-50%,-50%);
     display: flex;
     flex-direction: column;
     align-items: center;
