--- a/src/assets/styles/pages/GeminiChat.scss
+++ b/src/assets/styles/pages/GeminiChat.scss
@@ -1,8 +1,8 @@
 .gemini-modal-container{
-    // position: absolute;
-    // width: 200px;
+    position: absolute;
+    width: 600px;
     // height: 200px;
-    height: calc(100vh - 170px);
+    // height: calc(100vh - 170px);
     @media (max-width:770px) {
       height: calc(100vh - 220px);
       
@@ -13,15 +13,46 @@
     align-items: center;
     justify-content: center;
     padding: 2rem;
-    background-color: $dark-mode-background; // Dark semi-transparent background
+    background-color: $grey-darkest; // Dark semi-transparent background
     border-radius: 10px;
     // width: 400px;
     // height: auto;
-    box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
     // border: 1px solid $white;
     color: $white;
     z-index: 5;
     gap: 1em;
+    border-top: 3px solid #84a1eb5d;
+    border-left: 3px solid #84a1eb5d;
+    // transition: 0.2s;
+    // cursor: grab;
+    &:hover{
+      
+      border-top: 3px solid #84a1ebda;
+      border-left: 3px solid #84a1ebda;
+      box-shadow: 0 4px 8px rgba(153, 0, 255, 0.798);
+    }
+
+    .close-button{
+      position: absolute;
+      top: 0.5em;
+      right: 1em;
+      font-size: 1.5em;
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-items: center;
+      &:hover{
+        background-color: $grey-medium;
+      }
+      svg{
+        width: 30px;
+      }
+      
+    }
+
     span {
       font-size: 1.5em;
       font-weight: bold;
@@ -46,7 +77,7 @@
         gap: 1em;
         flex-direction: column-reverse;
         background-color: $grey-dark;
-        width: 100%;
+        width: 80%;
         border-radius: 8px;
         padding: 0em 1em 0.5em 1em;
 
