Fix some margins, add README file

--- a/src/assets/styles/cmps/UserOptions.scss
+++ b/src/assets/styles/cmps/UserOptions.scss
@@ -1,7 +1,7 @@
 .user-options-container {
     position: absolute;
     top: 65px;
-    right: 0;
+    right: 1em;
     background-color: $grey-dark;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
