--- a/src/assets/styles/cmps/Footer.scss
+++ b/src/assets/styles/cmps/Footer.scss
@@ -4,7 +4,7 @@
     padding: 20px;
     text-align: center;
     border-top: 1px solid #282828;
-    height: 200px;
+    // height: 200px;
     display: flex;
     align-items: end;
 
@@ -21,6 +21,14 @@
       margin: 0 auto;
   
       .footer-links {
+        svg{
+          cursor: pointer;
+          font-size: 1.2em;
+          transition: 0.2s;
+          &:hover{
+            transform: scale(1.5);
+          }
+        }
         ul {
           list-style: none;
           padding: 0;
