--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -1,5 +1,5 @@
 .made-for{
-    margin-inline-start: 0.5em;
+    margin-inline-start: 0.8em;
     font-size: 1.3em;
     font-family: 'GothamMedium';
 }
@@ -11,7 +11,8 @@
     max-width: 100%;
     height: 265px;
     overflow: hidden;
-    padding-left: 2.4rem;
+    // padding-left: 2.4rem;
+    margin-inline-start: 0.5em;
     @media (max-width:770px) {
         
         // height: calc(50vw);
