--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -10,6 +10,7 @@
     gap: 1em;
     max-width: 100%;
     height: 265px;
+    max-height: 265px;
     overflow: hidden;
     // padding-left: 2.4rem;
     margin-inline-start: 0.5em;
