--- a/src/assets/styles/pages/HomePage.scss
+++ b/src/assets/styles/pages/HomePage.scss
@@ -12,22 +12,23 @@
         overflow-x: hidden;
     }
     
-    &::after{
-        content: '';
+    // &::after{
+    //     content: '';
         
         
         
-        width: 10px;
-        height: 10px;
-        background-color: #ff000000;
+    //     width: 10px;
+    //     height: 10px;
+    //     background-color: #ff000000;
         
-    }
+    // }
 }
 .gradient-container{
     transition: 0.3s;
     width: 100%;
     height: calc(155%);
     height: calc(120vh);
+    height: calc(100vh - 170px);
     @media (max-width:770px) {
         height: calc(100vh + 500px);
         overflow-y: hidden;
