--- a/src/assets/styles/mq.scss
+++ b/src/assets/styles/mq.scss
@@ -85,7 +85,7 @@
   .app-header{
 
     .home-search-container{
-      display: none !important;
+      // display: none !important;
     } 
 
     .logo-container{
