Add css improvements

--- a/src/assets/styles/cmps/SuggestedStations.scss
+++ b/src/assets/styles/cmps/SuggestedStations.scss
@@ -1,5 +1,5 @@
 .made-for{
-    margin-inline-start: 0.8em;
+    padding-inline-start: 0.8em;
     font-size: 1.3em;
     font-family: 'GothamMedium';
 }
@@ -13,7 +13,7 @@
     max-height: 265px;
     overflow: hidden;
     // padding-left: 2.4rem;
-    margin-inline-start: 0.5em;
+    padding-inline-start: 0.5em;
     @media (max-width:770px) {
         
         // height: calc(50vw);
