--- a/src/assets/styles/pages/UserDetails.scss
+++ b/src/assets/styles/pages/UserDetails.scss
@@ -93,7 +93,11 @@
         height: 320px;
       }
       .suggest{
-        margin-inline-start: 1.8em;
+        margin-inline-start: 3.5em;
+        
+      }
+      .suggested-stations-container{
+        margin-inline-start: 2.5em;
 
       }
 }
